--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
